test/libyul/yulSyntaxTests/dot_consecutive_function.yul
{
    function x..y() {}
}
// ----
// TypeError 7771: (6-24): "x..y" is not a valid identifier (contains consecutive dots).
